Date Field Descriptions

--- a/Data_Field_Descriptions.ipynb
+++ b/Data_Field_Descriptions.ipynb
@@ -9,6 +9,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e87a259-4ff1-4b5b-b24e-2347349e985b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "table {float:left}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "table {float:left}\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "426b9ad8-462c-4f85-9ba1-01eedaa0f026",
    "metadata": {},
@@ -22,7 +52,7 @@
    "metadata": {},
    "source": [
     "| Variable | Description | Date Type |\n",
-    "| --- | --- | --- |\n",
+    "| :--- | --- | :---: |\n",
     "| fecha | Date of the price. | Date |\n",
     "| hora | Hour of the price. | Time |\n",
     "| sistema | System of the price. | String |\n",
@@ -47,7 +77,7 @@
    "metadata": {},
    "source": [
     "| Variable | Description | Date Type |\n",
-    "| --- | --- | --- |\n",
+    "| --- | --- | :---: |\n",
     "| LCLid | Individual Household Unique Identifier. | String |\n",
     "| Date | Date of recorded measurement. | Date |\n",
     "| KWH | Energy Consumption Measurement in kWh. | Float |\n"
@@ -67,7 +97,7 @@
    "metadata": {},
    "source": [
     "| Variable | Description | Date Type |\n",
-    "| --- | --- | --- |\n",
+    "| --- | --- | :---: |\n",
     "| date | Recorded date of measurment. | Date |\n",
     "| cloud_cover | Cloud cover measurement in oktas. | Float |\n",
     "| sunshine | Sunshine measurement in hours (hrs). | Float |\n",
