--- a/ADS-508_Final_Notebook.ipynb
+++ b/ADS-508_Final_Notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5d970136-2b3f-494a-80ba-29a29b31e6ba",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "285fb3f3-23bb-4cc9-b5a6-a3528660151e",
    "metadata": {
     "tags": []
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "13ce3b2a-a121-4f1b-94c5-5a5470aa5c3b",
    "metadata": {
     "tags": []
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5384b0d2-ba2d-443d-b2b8-f8e1089ec9ef",
    "metadata": {
     "tags": []
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2e98dd39-8d6d-4209-a2cd-b580a7f36eeb",
    "metadata": {
     "tags": []
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ce385cfd-a0b5-4486-ba5b-0b1172dfd4ec",
    "metadata": {
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b96e80d1-3b94-4f36-8c32-3bf5d34549c8",
    "metadata": {
     "tags": []
@@ -173,9 +173,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "copy: s3://ads-508-spring2023-team3/Hourly_European_Market_Data.csv to s3://sagemaker-us-east-1-025296024863/london_data/market_data/Hourly_European_Market_Data.csv/Hourly_European_Market_Data.csv\n",
-      "copy: s3://ads-508-spring2023-team3/London_Energy.csv to s3://sagemaker-us-east-1-025296024863/london_data/energy_data/London_Energy.csv/London_Energy.csv\n",
-      "copy: s3://ads-508-spring2023-team3/London_Weather_1979_2021.csv to s3://sagemaker-us-east-1-025296024863/london_data/weather_data/London_Weather_1979_2021.csv/London_Weather_1979_2021.csv\n"
+      "copy: s3://ads-508-spring2023-team3/Hourly_European_Market_Data.csv to s3://sagemaker-us-east-1-510267762309/london_data/market_data/Hourly_European_Market_Data.csv/Hourly_European_Market_Data.csv\n",
+      "copy: s3://ads-508-spring2023-team3/London_Energy.csv to s3://sagemaker-us-east-1-510267762309/london_data/energy_data/London_Energy.csv/London_Energy.csv\n",
+      "copy: s3://ads-508-spring2023-team3/London_Weather_1979_2021.csv to s3://sagemaker-us-east-1-510267762309/london_data/weather_data/London_Weather_1979_2021.csv/London_Weather_1979_2021.csv\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "20d2adc6-9174-453e-aae5-3ea9081fbbd4",
    "metadata": {
     "tags": []
@@ -197,9 +197,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-26 22:01:55  105185070 Hourly_European_Market_Data.csv\n",
-      "2023-03-26 22:01:57   95649585 London_Energy.csv\n",
-      "2023-03-26 22:01:59     814426 London_Weather_1979_2021.csv\n"
+      "2023-03-27 15:31:24  105185070 Hourly_European_Market_Data.csv\n",
+      "2023-03-27 15:31:26   95649585 London_Energy.csv\n",
+      "2023-03-27 15:31:29     814426 London_Weather_1979_2021.csv\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "33c10661-fbe1-4c56-8ecf-19a3a09cc765",
    "metadata": {
     "tags": []
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "09e71ee9-19f2-4e92-8547-5e08bb844190",
    "metadata": {
     "tags": []
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "da29b63b-3135-49b3-8eb0-357494f7423b",
    "metadata": {
     "tags": []
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f89442fa-d3e0-466e-bb21-b60f2c82595c",
    "metadata": {
     "tags": []
@@ -286,7 +286,8 @@
       "Database london_data succesfully created!\n",
       "  database_name\n",
       "0       default\n",
-      "1   london_data\n"
+      "1        dsoaws\n",
+      "2   london_data\n"
      ]
     }
    ],
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "419e68cf-420f-4001-8af0-9b8cdd311111",
    "metadata": {
     "tags": []
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "96a75893-ff4a-49c3-9a07-45b5dbd85c9e",
    "metadata": {
     "tags": []
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1bf186e8-bd1c-4cfd-8d1d-a4ae406c0455",
    "metadata": {
     "tags": []
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e91e38a5-d8a3-48bb-9fb8-cf1261b0e58d",
    "metadata": {
     "tags": []
@@ -502,7 +503,7 @@
        "2               london_weather_csv"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "1aebddb4-6986-42d6-80ce-b71bf90b1f38",
    "metadata": {
     "tags": []
@@ -636,13 +637,13 @@
        "4 2021-10-01 12:39:53  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Show the first two rwos to ensure that the data looks correct\n",
+    "# Show the first few rows to ensure that the data looks correct\n",
     "query = \"\"\"\n",
     "    SELECT *\n",
     "    FROM {}.{}\n",
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "c5de8527-9593-4a7c-b6e2-1b29921df37b",
    "metadata": {
     "tags": []
@@ -689,33 +690,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>MAC001861</td>\n",
-       "      <td>2013-12-15</td>\n",
-       "      <td>33.379</td>\n",
+       "      <td>MAC000002</td>\n",
+       "      <td>2012-10-12</td>\n",
+       "      <td>7.098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>MAC001861</td>\n",
-       "      <td>2013-12-16</td>\n",
-       "      <td>16.529</td>\n",
+       "      <td>MAC000002</td>\n",
+       "      <td>2012-10-13</td>\n",
+       "      <td>11.087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>MAC001861</td>\n",
-       "      <td>2013-12-17</td>\n",
-       "      <td>17.678</td>\n",
+       "      <td>MAC000002</td>\n",
+       "      <td>2012-10-14</td>\n",
+       "      <td>13.223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MAC001861</td>\n",
-       "      <td>2013-12-18</td>\n",
-       "      <td>16.908</td>\n",
+       "      <td>MAC000002</td>\n",
+       "      <td>2012-10-15</td>\n",
+       "      <td>10.257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MAC001861</td>\n",
-       "      <td>2013-12-19</td>\n",
-       "      <td>18.316</td>\n",
+       "      <td>MAC000002</td>\n",
+       "      <td>2012-10-16</td>\n",
+       "      <td>9.769</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -723,14 +724,14 @@
       ],
       "text/plain": [
        "       lclid        date     kwh\n",
-       "0  MAC001861  2013-12-15  33.379\n",
-       "1  MAC001861  2013-12-16  16.529\n",
-       "2  MAC001861  2013-12-17  17.678\n",
-       "3  MAC001861  2013-12-18  16.908\n",
-       "4  MAC001861  2013-12-19  18.316"
+       "0  MAC000002  2012-10-12   7.098\n",
+       "1  MAC000002  2012-10-13  11.087\n",
+       "2  MAC000002  2012-10-14  13.223\n",
+       "3  MAC000002  2012-10-15  10.257\n",
+       "4  MAC000002  2012-10-16   9.769"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "8559c35c-b3c1-46f7-9417-0f8335aa923f",
    "metadata": {
     "tags": []
@@ -872,7 +873,7 @@
        "4      -1.4            0.0  102250.0         1.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8a0995d7-4457-420b-ace0-3a07df84c76c",
    "metadata": {
     "tags": []
@@ -1018,7 +1019,7 @@
        "9  2011      4  52.013780"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "77f65dad-b19d-4144-9159-3c3a51461680",
    "metadata": {
     "tags": []
@@ -1058,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "0e8a1ad5-9666-447b-89c7-11260d4a2af2",
    "metadata": {
     "tags": []
@@ -1102,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "6eb0de2d-97d1-4abf-8a22-e6c97606314b",
    "metadata": {
     "tags": []
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "c50921fe-6bdb-4dd1-addf-fc918a4464a1",
    "metadata": {
     "tags": []
@@ -1271,7 +1272,7 @@
        "9  2010      7    10  46.889730"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "877f9840-4cc5-43af-bc7c-978f5a29519d",
    "metadata": {
     "tags": []
@@ -1332,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "e74a9b3c-1036-40ff-ac74-2a282fe8d88c",
    "metadata": {
     "tags": []
@@ -1395,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "aa615ce5-8e9f-4c1c-a042-e35626a03189",
    "metadata": {
     "tags": []
@@ -1409,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "2433cabf-4509-41b6-97a9-ab29a8f41281",
    "metadata": {
     "tags": []
@@ -1429,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "554c2cbe-0a81-486a-9fc7-a1cffaced025",
    "metadata": {
     "tags": []
@@ -1443,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "924f187a-5b01-4c4c-8502-cfb167f34a65",
    "metadata": {
     "tags": []
@@ -1465,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "1d0d540b-8171-4230-9f66-28ceac0cebe9",
    "metadata": {
     "tags": []
@@ -1486,7 +1487,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "6a858e32-99be-40c0-a07b-1e343064100c",
    "metadata": {
     "tags": []
@@ -1513,7 +1514,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "72794114-3ece-4c8d-bf46-84f18d106699",
    "metadata": {
     "tags": []
@@ -1547,7 +1548,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "b9b118dd-a613-4c17-b7a3-2618c755abfb",
    "metadata": {
     "tags": []
@@ -1714,7 +1715,7 @@
        "12117        6.8       3.2            0.0  102190.0         0.0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "458fb17d-8ae2-4761-afa1-5ae29b7044ce",
    "metadata": {
     "tags": []
@@ -1748,7 +1749,7 @@
        "5.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "2cac4f5f-aab1-4d6a-9217-332ff56d7858",
    "metadata": {
     "tags": []
@@ -1797,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "897be740-2597-4319-9457-526398b589da",
    "metadata": {
     "tags": []
@@ -1831,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "687af71d-68b9-45d0-ace1-39f95174d50d",
    "metadata": {
     "tags": []
@@ -1859,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "8c09740b-4d07-4ea3-b4c2-9be2fbc8112d",
    "metadata": {
     "tags": []
@@ -1876,7 +1877,7 @@
        "Name: sistema, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "11970a89-8f8b-4fb5-a36a-ee0604c0bee8",
    "metadata": {
     "tags": []
@@ -1911,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "4fca98cb-1380-4c1a-a0aa-3c5d5b2640ea",
    "metadata": {
     "tags": []
@@ -1934,7 +1935,7 @@
        "Name: LCLid, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,30 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "e0b84d56-3ce5-48ef-9ce9-e80f8bcdc15c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Date', 'hora', 'precio', 'tipo_moneda'], dtype='object')"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "market_data_hu_subset.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "d879bc35-f9c2-4831-8433-9f4485f130dc",
    "metadata": {
     "tags": []
@@ -1990,7 +1968,7 @@
        "Name: tipo_moneda, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2009,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "d6dedb1e-d118-4a1c-a0c5-c612396cb977",
    "metadata": {
     "tags": []
@@ -2030,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "id": "a0a98548-9ffa-4857-9d6a-fb12ec88228e",
    "metadata": {
     "tags": []
@@ -2186,7 +2164,7 @@
        "4         0.0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2196,6 +2174,100 @@
     "import functools as ft\n",
     "joined_dataset = ft.reduce(lambda left, right: pd.merge(left, right, on='Date', how = 'inner'), dfs)\n",
     "joined_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "627eaf75-bb8b-443e-a980-24c6a42190dc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Group hourly market data by date to create one average daily price\n",
+    "market_data_daily_avg = market_data_hu_subset.groupby([\"Date\"]).mean(\"precio\").reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acdc7a0d-d8fb-473d-b432-53b447266c28",
+   "metadata": {},
+   "source": [
+    "Creating a daily average price will ensure all value are recorded at the same time interval, daily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "af76a323-8329-438a-88cc-875900a4bffd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Merge the average daily price with the energy consumption data set\n",
+    "merged_df = pd.merge(\n",
+    "    market_data_daily_avg,\n",
+    "    energy_data_id_subset,\n",
+    "    how = \"inner\",\n",
+    "    on = \"Date\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9b08b086-a825-43d8-9334-ad6d4518bf44",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Merge the above joined data frame with the daily weather dataset\n",
+    "merged_df = pd.merge(\n",
+    "    merged_df,\n",
+    "    weather_data_subset,\n",
+    "    how = \"inner\",\n",
+    "    on = \"Date\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d2f07bdb-cb82-4cd7-a5a0-eafb5c8335df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(829, 12)\n",
+      "        Date     precio        KWH  cloud_cover  sunshine  global_radiation  \\\n",
+      "0 2011-11-23  87.079792   7.178909          7.0       2.0              35.0   \n",
+      "1 2011-11-24  79.130875  10.911727          3.0       2.0              35.0   \n",
+      "2 2011-11-25  71.704208  11.023909          3.0       5.0              52.0   \n",
+      "3 2011-11-26  50.857750  11.419455          4.0       0.7              24.0   \n",
+      "4 2011-11-27  41.124167  11.972273          3.0       5.9              55.0   \n",
+      "\n",
+      "   max_temp  mean_temp  min_temp  precipitation  pressure  snow_depth  \n",
+      "0      13.5        6.8       2.6            0.2  102720.0         0.0  \n",
+      "1      12.5        8.6       3.7            0.2  102710.0         0.0  \n",
+      "2      14.0       11.0       9.5            0.0  102450.0         0.0  \n",
+      "3      13.9       10.2       6.3            0.0  102580.0         0.0  \n",
+      "4      13.2       11.8       9.7            0.0  102130.0         0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Groupby Date to average sampled households energy consumption\n",
+    "# Drop the hour column since data is daily now\n",
+    "full_joined_df = merged_df.groupby([\"Date\"]).mean().drop(\"hora\", axis = 1).reset_index()\n",
+    "print(full_joined_df.shape)\n",
+    "print(full_joined_df.head(5))"
    ]
   },
   {
