--- a/ADS-508_Final_Notebook.ipynb
+++ b/ADS-508_Final_Notebook.ipynb
@@ -2442,8 +2442,7 @@
    "outputs": [],
    "source": [
     "# Convert the data to a .JSON extension\n",
-    "write_dicts_to_file(\n",
-    "    \"training_data.json\", training_data)\n",
+    "write_dicts_to_file(\"training_data.json\", training_data)\n",
     "write_dicts_to_file(\"validation_data.json\", validation_data)"
    ]
   },
