Model Trained - Need Metrics

--- a/ADS-508_Final_Notebook.ipynb
+++ b/ADS-508_Final_Notebook.ipynb
@@ -2527,14 +2527,14 @@
    "source": [
     "# Set up base hyperparameters\n",
     "hyperparameters = {\n",
-    "    \"time_freq\": freq,\n",
-    "    \"context_length\": str(90), #How far back to look to predict, apprx. equal to prediction length\n",
-    "    \"prediction_length\": str(61), #There are 61 dayas in the validation set\n",
-    "    \"epochs\": \"400\",\n",
-    "    \"learning_rate\": \"5E-4\",\n",
-    "    \"mini_batch_size\": \"64\",\n",
-    "    \"early_stopping_patience\": \"40\",\n",
-    "    \"num_dynamic_feat\": \"auto\"\n",
+    "    \"time_freq\" : freq,\n",
+    "    \"context_length\" : str(90), #How far back to look to predict, apprx. equal to prediction length\n",
+    "    \"prediction_length\" : str(61), #There are 61 days in the validation set\n",
+    "    \"epochs\" : \"400\",\n",
+    "    \"learning_rate\" : \"5E-4\",\n",
+    "    \"mini_batch_size\" : \"64\",\n",
+    "    \"early_stopping_patience\" : \"40\",\n",
+    "    \"num_dynamic_feat\" : \"auto\"\n",
     "}\n",
     "\n",
     "deepar_estimator.set_hyperparameters(**hyperparameters)"
@@ -2631,7 +2631,7 @@
     }
    ],
    "source": [
-    "deepar_estimator.latest_training_job.wait(logs=False)"
+    "deepar_estimator.latest_training_job.wait(logs = False)"
    ]
   },
   {
